# palisade

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.User.txt  CMakeLists.txt  Code-of-conduct.md  Contributing.md  Governance.md  License.md  Makefile.common  PalisadeConfig.cmake.in  PalisadeConfigVersion.cmake.in  README.md  Release_Notes.md  Security.md  Vagrantfile  configure.sh  lbcrypto-doxy-config
benchmark/: CMakeLists.txt
benchmark/src/: Crypto.cpp  Encoding.cpp  EncryptHelper.h  IntegerMath.cpp  Lattice.cpp  NbTheory.cpp  README.md  SHE.cpp  VectorMath.cpp  basic_test.cpp  binfhe-ap.cpp  binfhe-ginx.cpp  binfhe.cpp  compare-bfvrns-vs-bfvrnsB.cpp  lib-benchmark.cpp  lib-hexl-benchmark.cpp  poly-benchmark-16k.cpp  poly-benchmark-1k.cpp  poly-benchmark-4k.cpp  poly-benchmark-64k.cpp  vechelper.h
src/abe/: CMakeLists.txt
src/abe/demo/: CPABEDemo.cpp  CPABETwoPhaseDemo.cpp  IBEDemo.cpp  IBETwoPhaseDemo.cpp
src/abe/examples/: cp-abe-two-phase.cpp  cpa-abe.cpp  ibe-two-phase.cpp  ibe.cpp
src/abe/include/: abecontext.h  abecore.h  abeparamset.h  cpabe.h  ibe.h
src/abe/lib/: abecontext-impl.cpp  abecontext.cpp  abecontext.h  abecore-impl.cpp  abecore.h  cpabe-impl.cpp  cpabe.cpp  cpabe.h  ibe-impl.cpp  ibe.cpp  ibe.h
src/abe/unittest/: UnitTestCPABE.cpp  UnitTestIBE.cpp
src/binfhe/: CMakeLists.txt
src/binfhe/demo/: demo-boolean-serial-binary.cpp  demo-boolean-serial-json.cpp  demo-boolean.cpp
src/binfhe/examples/: boolean-ap.cpp  boolean-serial-binary.cpp  boolean-serial-json.cpp  boolean-truth-tables.cpp  boolean.cpp  equality.cpp
src/binfhe/include/: binfhecontext-ser.h  binfhecontext.h  fhew.h  lwe.h  lwecore.h  ringcore.h
src/binfhe/lib/: binfhecontext.cpp  fhew.cpp  lwe.cpp
src/binfhe/unittest/: UnitTestFHEW.cpp  UnitTestFHEWSerial.cpp
src/core/: CMakeLists.txt
src/core/demo/: AESUtilDemo.cpp  DFTSource.cpp  MathSource.cpp  NTTSource.cpp  NTTSource2.cpp  ParallelSource.cpp  SamplingSource.cpp
src/core/examples/: parallel.cpp  sampling.cpp
src/core/extras/: aes-util.cpp  dft.cpp  math.cpp  ntt1.cpp  ntt2.cpp
src/core/include/: palisadecore.h  version.h
src/core/include/encoding/: ckkspackedencoding.h  encodingparams.h  encodings.h  fractionalencoding.h  integerencoding.h  packedencoding.h  plaintext.h  plaintextfactory.h  scalarencoding.h  stringencoding.h
src/core/include/lattice/: README.md  dcrtpoly.h  dgsampling.h  elemparams.h  field2n.h  ildcrtparams.h  ilelement.h  ilparams.h  poly.h  (+2 more)
src/core/unittest/: UnitTestBinInt.cpp  UnitTestBinVect.cpp  UnitTestBlockAllocate.cpp  UnitTestCommonElements.cpp  UnitTestDCRTElements.cpp  UnitTestDistrGen.cpp  UnitTestEncoding.cpp  UnitTestField2n.cpp  UnitTestMatrix.cpp  UnitTestMubintvec.cpp  UnitTestNTT.cpp  UnitTestNbTheory.cpp  UnitTestPolyElements.cpp  UnitTestSTLBlockAllocate.cpp  UnitTestSerialize.cpp  UnitTestTransform.cpp  UnitTestTrapdoor.cpp  UnitTestXallocate.cpp
src/pke/: CMakeLists.txt
src/pke/demo/: README.md  demo-advanced-real-numbers.cpp  demo-automorphism.cpp  demo-bfvrns.cpp  demo-cross-correlation-bfvrns.cpp  demo-cross-correlation.cpp  demo-crypt-pre-text.cpp  demo-depth-bfvrns-b.cpp  demo-depth-bfvrns.cpp  demo-evalatindex.cpp  demo-fusion-simple.cpp  demo-json.cpp  demo-linregress.cpp  demo-packing.cpp  demo-pke.cpp  demo-pre.cpp  demo-she.cpp  demo-simple-example-serial.cpp  demo-simple-example.cpp  demo-simple-real-numbers.cpp  run-bfvrns-b.cpp  run-bfvrns.cpp
src/pke/examples/: README.md  advanced-real-numbers.cpp  cross-correlation-bfvrns.cpp  depth-bfvrns-b.cpp  depth-bfvrns.cpp  depth-bgvrns.cpp  evalatindex.cpp  pke.cpp  pre-text.cpp  pre.cpp  simple-integers-serial-bgvrns.cpp  simple-integers-serial.cpp  simple-integers.cpp  simple-real-numbers-serial.cpp  simple-real-numbers.cpp  threshold-fhe.cpp
src/pke/extras/: CPPLINT.cfg  automorphism.cpp  bfvrns.cpp  demo-depth-bfvrns-b.cpp  demo-depth-bfvrns.cpp  json.cpp  linregress.cpp  packing-arb-cyclotomics.cpp  run-bfvrns-b.cpp  she.cpp  threshold-fhe-and-pre.cpp
src/pke/include/: ciphertext.h  cryptocontext-ser.h  cryptocontext.h  cryptocontextgen.h  cryptotiming.h  palisade.h  pubkeylp-ser.h  pubkeylp.h  rationalciphertext.h  rationalct-ser.h
src/pke/lib/: bfv-ser.h  bfv.cpp  bfv.h  bfvrns-dcrtpoly-impl.cpp  bfvrns-impl.cpp  bfvrns-ser.h  bfvrns.cpp  bfvrns.h  bfvrnsB-dcrtpoly-impl.cpp  bfvrnsB-impl.cpp  bfvrnsB.cpp  bfvrnsB.h  bgv-dcrtpoly-impl.cpp  bgv-ser.h  bgv.cpp  bgv.h  ciphertext-impl.cpp  ciphertext-ser.h  ciphertext.h  cryptocontext-impl.cpp  cryptocontext-ser.h  cryptocontext.cpp  cryptocontext.h  cryptocontextfactory.cpp  cryptocontextgen.h  cryptocontexthelper-impl.cpp  cryptocontexthelper.h  cryptocontextparametersets-impl.cpp  cryptocontextparametersets.h  cryptotiming-impl.cpp  cryptotiming.h  ltv.cpp  ltv.h  matrixser-impl.cpp  nullscheme-impl.cpp  nullscheme-ser.h  nullscheme.h  palisade.h  pubkeylp-impl.cpp  pubkeylp.cpp  (+6 more)
src/pke/unittest/: UnitTestAutomorphism.cpp  UnitTestBFVrnsCRTOperations.cpp  UnitTestBGVrns.cpp  UnitTestBVDCRT.cpp  UnitTestBatching.cpp  UnitTestCKKS.cpp  UnitTestCryptotiming.cpp  UnitTestENCRYPT.cpp  UnitTestEvalCrossCorrelation.cpp  UnitTestEvalInnerProduct.cpp  UnitTestEvalLinearRegression.cpp  UnitTestEvalMult.cpp  UnitTestEvalMultMany.cpp  UnitTestEvalSum.cpp  UnitTestMultiparty.cpp  UnitTestPRE.cpp  UnitTestSHE.cpp  UnitTestSHEAdvanced.cpp  UnitTestSer.h  UnitTestSerializeBFV.cpp  UnitTestSerializeBFVrns.cpp  UnitTestSerializeBFVrnsB.cpp  UnitTestSerializeBGVrns.cpp  UnitTestSerializeCKKS.cpp  UnitTestSerializeNull.cpp  UnitTestSerializePKE.cpp  UnitTestSerializeStSt.cpp  UnitTestStatisticalEval.cpp  UnitTestUtils.h
src/signature/: CMakeLists.txt
src/signature/demo/: GPVSource.cpp  GPVSourceNativePoly.cpp  GPVSourceTwoPhase.cpp
src/signature/examples/: gpv-native-poly.cpp  gpv-two-phase.cpp  gpv.cpp
src/signature/include/: gpv.h  signaturecontext.h  signaturecore.h
src/signature/lib/: gpv-impl.cpp  gpv.cpp  gpv.h  signaturecontext-impl.cpp  signaturecontext.cpp  signaturecontext.h  signaturecore.h
src/signature/unittest/: UnitTestGPV.cpp
(+204 files in other folders)
